[package]
name = "r-rebstome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
# tokio = { version = "~1.34.0", features = ["net", "macros", "rt"] }
toml = "0.8.10"
